# Curlu

./: Cargo.toml  STYLE_GUIDE.md
.github/workflows/: release.yml
.project-artifacts/changes/ui-improvements/: change-state.md  spec.md
design_files/http-client-ui-redesign/: README.md
design_files/http-client-ui-redesign/project/: .thumbnail  Curlu.dc.html  CurluApp.dc.html
macos/: Info.plist
src/: app.rs  highlight.rs  http.rs  main.rs  settings.rs  theme.rs
