[package]
name = "curlu"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
dirs = "6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
